# ragmax

./: .env.example  .gitignore  CLAUDE.md  EVALUATION_COMPLETE_SUMMARY.md  EVALUATION_COMPLETE_SUMMARY_V2.md  EVALUATION_FINAL_SUMMARY.md  EVALUATION_PLATFORM_DESIGN.md  HYBRID_SEARCH_CONCURRENT_OPTIMIZATION.md  INDEXING_LEGACY_CODE_CLEANUP.md  INDEXING_REFACTORING_COMPLETE.md  INDEXING_UI_UX_OPTIMIZATION_COMPLETE.md  MULTIMODAL_QUICKSTART.md  MULTI_QUERY_ANALYSIS.md  MULTI_QUERY_DEEPSEEK_CONFIG.md  MULTI_QUERY_IMPLEMENTATION.md  PHASE1_EVALUATION_SUMMARY.md  PHASE2_COMPLETE.md  PHASE2_EVALUATION_SUMMARY.md  PHASE4_PART1_COMPLETE.md  PHASE4_QUICKSTART.md  PHASE4_WEB_UI_COMPLETE.md  README.md  REFACTORING_SUMMARY.md  RETRIEVAL_CHAT_DESIGN_PLAN.md  RETRIEVAL_CHAT_IMPLEMENTATION_SUMMARY.md  RETRIEVAL_CHAT_LAYOUT_FIX.md  RETRIEVAL_CHAT_QUICKSTART.md  RETRIEVAL_DEBUG_GUIDE.md  RETRIEVAL_IMPLEMENTATION.md  RETRIEVAL_PAGE_REFACTORING_COMPLETE.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: plan.md
alembic/: env.py  script.py.mako
tests/: conftest.py  test_auth.py  test_bbox_aggregation.py  test_bge_reranker.py  test_chunk_quality.py  test_evaluation_evaluator.py  test_evaluation_generator.py  test_evaluation_loader.py  test_evaluation_metrics.py  test_file_source_indexing.py  test_fixed_token_algorithm.py  test_fixed_token_chunker.py  test_health.py  test_indexing_pipeline.py  test_indexing_preview.py  test_indexing_profiles.py  test_llamaparse_parser.py  test_openai_embedding_provider.py  test_parser_registry.py  test_qdrant_sparse_index.py  test_retrieval.py  (+14 more)
(+246 files in other folders)
