[project]
name = "ragmax"
version = "0.1.0"
description = "A FastAPI backend for notebook-style RAG systems."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "click>=8.0.0",
    "fastapi>=0.115.0",
    "jieba>=0.42.1",
    "llama-cloud>=1.0",
    "llama-index>=0.12.0",
    "llama-index-vector-stores-qdrant>=0.4.0",
    "markdown-it-py>=3.0.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.10.0",
    "pyyaml>=6.0",
    "scipy>=1.10.0",
    "sentence-transformers>=3.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
ragmax-eval = "ragmax.cli.eval:main"

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragmax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
